# voxstream-experiments

./: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: native-voxtream.env.example  voxtream.generator.json  voxtream2.generator.json  voxtream2.speaking_rate.json
docs/: VOXTREAM_FIRST_RUN_PLAN_2026-03-23.md  VOXTREAM_PROVIDER_API_CONTRACT_2026-03-23.md
scripts/: run_doctor.sh  run_provider.sh
src/voxtream_experiments/: cli.py  config.py  event_log.py  native_voxtream2.py  provider_models.py  provider_server.py  runtime.py
tests/: test_config.py  test_provider_runtime.py
